--- a/SchoolTemplate/Views/Home/Index.cshtml
+++ b/SchoolTemplate/Views/Home/Index.cshtml
@@ -1,8 +1,18 @@
-﻿@{
-    ViewData["Title"] = "Home Page";
+﻿@using SchoolTemplate.Database;
+@model List<Product>
+@{
+  ViewData["Title"] = "Home Page";
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+  <h1 class="display-4">Welcome</h1>
+  <ul>
+    @foreach (Product p in Model)
+    {
+      <li>
+        @p.Naam @p.Prijs euro
+      </li>
+    }
+  </ul>
+  <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
 </div>
