--- a/SchoolTemplate/Views/Evenement/Evenementen.cshtml
+++ b/SchoolTemplate/Views/Evenement/Evenementen.cshtml
@@ -12,13 +12,13 @@
         {
             <div class="col">
                 <div class="card shadow-sm">
-                    <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"></rect><text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text></svg>
+                    <img src="/img/@evenement.Logo" class="card-img-top"/>
 
                     <div class="card-body">
                         <h5 class="card-title">@evenement.Naam</h5>
                         <p class="card-text">@evenement.Beschrijving</p>
-                        <div class="d-flex justify-content-between align-items-center">
-                            <a type="button" class="btn btn-block btn-outline-secondary" href="/evenementen/@evenement.Id">Details</a>
+                        <div class="d-grid gap-2">
+                            <a type="button" class="btn btn-outline-info" href="/evenementen/@evenement.Id">Details</a>
                         </div>
                     </div>
                 </div>
