--- a/SchoolTemplate/wwwroot/css/site.css
+++ b/SchoolTemplate/wwwroot/css/site.css
@@ -54,3 +54,11 @@ body {
   height: 60px;
   line-height: 60px; /* Vertically center the text there */
 }
+
+.footer, .navbar {
+    background-color: hsl(0, 0%, 86%)!important;
+}
+
+body {
+    background-color:hsl(0, 0%, 96%);
+}
